# ai-code-generator

./: .gitignore  .prettierignore  learn.md
backend/: pyproject.toml  pyrightconfig.json
backend/src/: app.py
frontend/: .env  package-lock.json  package.json
frontend/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/history/: HistoryPanel.jsx
frontend/layout/: Layout.jsx
frontend/src/: App.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
