[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-sdk-python>=0.1.0",
    "fastapi>=0.117.1",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '/(\.venv|venv|build|dist|\.mypy_cache|\.ruff_cache|\.pytest_cache)/'

[tool.isort]
profile = "black"
line_length = 100
py_version = 313
skip = [
  ".venv",
  "venv",
  "build",
  "dist",
]
